# 147-mamba-for-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
docs/ru/: theory.md
python/: __init__.py  backtest.py  data_loader.py  features.py  mamba_model.py  requirements.txt  train.py
python/notebooks/: 01_mamba_trading.ipynb
rust/: Cargo.toml
rust/examples/: fetch_data.rs  live_trading.rs  mamba_inference.rs
rust/src/: lib.rs
rust/src/api/: bybit.rs  mod.rs
rust/src/model/: mamba.rs  mod.rs  trading.rs
