[package]
name = "mamba_trading"
version = "0.1.0"
edition = "2021"
authors = ["Machine Learning for Trading"]
description = "Mamba architecture implementation for trading applications"
license = "MIT"
readme = "README.md"

[lib]
name = "mamba_trading"
path = "src/lib.rs"

[dependencies]
# Array operations
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[[example]]
name = "fetch_data"
path = "examples/fetch_data.rs"

[[example]]
name = "mamba_inference"
path = "examples/mamba_inference.rs"

[[example]]
name = "live_trading"
path = "examples/live_trading.rs"
